# FastQuiz

./: Makefile  docker-compose.yml  pyproject.toml
app/: Dockerfile  app.py  requirements.txt
tests/: conftest.py  test_app.py
tests/endpoints/: test_questions.py  test_upload.py
