[tool.poetry]
name = "fastquiz"
version = "0.1.0"
description = ""
authors = ["Kristian Marlowe Ole <krismar.ole@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
pymongo = "^4.8.0"
dnspython = "^2.6.1"
python-dotenv = "^1.0.1"
pytest = "^8.3.3"
pytest-flask = "^1.3.0"
mongomock = "^4.2.0.post1"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
